--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "react-native-safe-area-context": "^3.1.1",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.10.1",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-vector-icons": "^7.0.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
