--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "react-native-screens": "^2.10.1",
     "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
