--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link": "^1.2.12",
+    "apollo-link-rest": "^0.7.3",
+    "apollo-link-state": "^0.4.2",
+    "graphql": "^14.3.1",
+    "graphql-anywhere": "^4.2.4",
+    "graphql-tag": "^2.10.1",
+    "qs": "^6.7.0",
+    "react-apollo": "^2.5.8",
+    "react-apollo-hooks": "^0.4.5",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/drawer": "^5.9.0",
@@ -41,8 +52,6 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.10.1",
     "react-native-vector-icons": "^7.0.0",
-    "react-redux": "^7.2.1",
-    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
